--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # #배포환경(krampoline) - URL 주소 확인
-REACT_APP_API_URL=https://devdoc-backend-a9c04f690ebd.herokuapp.com
+REACT_APP_API_URL=https://k459d94662d17a.user-app.krampoline.com
